testsuite/tests/name_resolution/late_use_clause/test.out
Analyzing testuse.adb
#####################

Resolving xrefs for node <ObjectDecl ["C"] testuse.adb:14:7-14:24>
******************************************************************

testuse.adb:14:20: error: expected Float, got Integer
14 |       C : Float := Foo;
   |                    ^^^


Resolving xrefs for node <UsePackageClause testuse.adb:15:7-15:13>
******************************************************************

Expr: <Id "B" testuse.adb:15:11-15:12>
  references:    <DefiningName "B" testuse.adb:8:12-8:13>
  type:          None
  expected type: None

Resolving xrefs for node <NullStmt testuse.adb:17:7-17:12>
**********************************************************



Done.
